--- a/views/favrecipe.handlebars
+++ b/views/favrecipe.handlebars
@@ -29,7 +29,7 @@
            {{ingredient}}
          </li>
         {{/each}}
-        <input class="blockbutt" type="submit" value="Add to Groceries List">
+        <input class="blockbutt addIng" type="submit" value="Add to Groceries List" >
       </form>
       </ul>
 
