--- a/views/ingredient.handlebars
+++ b/views/ingredient.handlebars
@@ -21,5 +21,6 @@
   <label>Send list to mobile number +65: <input type="text" name="hp"></label>
   <button id='sms'><i class="material-icons">perm_phone_msg</i></button>
 </form>
+  <p class="disclaim">Note: Only mobile numbers verified with <a href="mailto:ngwanzhen@gmail.com">Admin</a> will be able to receive the messages.
 
 </div>
