--- a/public/css/home.css
+++ b/public/css/home.css
@@ -220,89 +220,6 @@ p.onetitle{
   border-bottom: 1px solid #545454;
   padding: 5px 1px;
 }
-/*
-.one {
-    background-color: #eee;
-    display: inline-block;
-    width: 100%;
-    text-align: center;
-    margin: 10px 250px;
-    border-bottom: 1px solid #545454;
-    font-size: 1.5rem;
-    padding: 20px
-}
-
-.one .material-icons{
-  font-size: 1.5rem;
-}
-
-.one p{
-  font-size: 2.0rem;
-}
-
-.one img{
-  max-width: 40%;
-  max-height: 40%;
-  border-radius: 15px;
-  display: block;
-  margin: 0 auto;
-}
-
-ul {
-  margin: 0 auto;
-  list-style-type: circle;
-}
-
-li {
-  text-align: left;
-}
-
-.one.title{
-  font-size: 2.0rem;
-  display: inline;
-  vertical-align: middle;
-}
-
-#addBtn{
-  color: red;
-  font-size: 2rem;
-  cursor: pointer;
-}
-
-.onerow{
-  line-height: 20px;
-  display: inline;
-  vertical-align: middle;
-  margin: 2px auto;
-  border-top: 1px solid #545454;
-  border-bottom: 1px solid #545454;
-  padding: 5px 1px;
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
-
-span{
-  text-decoration: underline;
-  color: cyan;
-  font-size: 120%;
-}*/
-
-/*@media only screen and (max-width: 500px){
-     .imgDisplay .textdiv{
-       display: block;
-    }
-    .imgDisplay{
-      width: 300px;
-      height: 300px;
-    }
-    .nav-item{
-      font-size: 300%;
-    }
-
-    body{
-      background-color: blue;
-    }
-}*/
 
 /*for featured recipe and quotes*/
 .featuredContainer {
@@ -372,4 +289,8 @@ img {
   width: 100%;
   line-height: 25px;
   background-color: white;
+}
+
+#home {
+  color: #F66957;
 }
