--- a/views/homeOneRecipe.handlebars
+++ b/views/homeOneRecipe.handlebars
@@ -3,7 +3,7 @@
 
 <div class="item">
   <img src="{{onerecipe.imageUrl}}">
-  <p class="title"><i class="material-icons" id="addBtn">add_circle<span class="hidden">ADD TO FAV</span></i>{{onerecipe.name}}</p>
+  <p class="title"><i class="material-icons" id="featAddBtn">add_circle<span class="hidden">ADD TO FAV</span></i>{{onerecipe.name}}</p>
 
   <div class="row">
     <i class="material-icons">accessibility</i>{{onerecipe.serving}} |
